sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: not found: value ech
	while(ecart > 1 || ech)
                           ^