sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart:Int = getNombreValeurs()
	do {
		if(ecart > 1) {
			ecart = (ecart.toDouble / 1.3).toInt
		}
	var i:Int = 0
	var ech = false
	while(i + ecart < getNombreValeurs) {
		if(plusPetit(i + 1, i)) {
			echange(i, i + 1)
			ech = true
		}
		i = i + 1
	}
	}
	while(ecart > 1 || ech)
}
